--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 	<head>
 		<title> My Website </title>
+		<script src="index.js"></script>
+		<link rel="stylesheet" href="index.css">
 	</head>
 
 	<body>
-		Hello, world!
+		<h1>Hello, world!</h1>
 	</body>
 </html>
