--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 	<head>
 		<title> My Website </title>
 		<script src="main.js" defer></script>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 		<!--<link rel="stylesheet" type="text/css" href="style.css">-->
 	</head>
 
 	<body>
-		<canvas id="canvas"></canvas>
+		<canvas id="canvas" width=800 height=600></canvas>
 	</body>
 </html>
